--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,22 @@
+/* RESET */
+html, body, h2, h3, h4, h5, h6, p, q, ol, ul, li, dl, lh, dt, dd, pre, code, address, variable, form, fieldset, blockquote, cite {
+	padding: 0;
+	margin: 0;
+	font-size: 100%;
+	font-weight: normal;
+	font-style:normal;
+}
+html {
+	-webkit-text-size-adjust: 100%; /* Prevents iOS text size adjust after orientation change, without disabling user zoom */
+	-ms-text-size-adjust: 100%; /* www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/ */
+}
+* {
+	box-sizing: border-box; /* apply a natural box layout model to all elements; see http://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
+}
+/* SITEWIDE STYLES */
+
+/* FONTS */
+
 @font-face {
     font-family: 'Lagrange Mono';
     src:
@@ -15,27 +34,43 @@
     font-weight:400;
 }
 
-/* RESET */
-html, body, h2, h3, h4, h5, h6, p, q, ol, ul, li, dl, lh, dt, dd, pre, code, address, variable, form, fieldset, blockquote, cite, button {
-	padding: 0;
-	margin: 0;
-	font-size: 100%;
-	font-weight: normal;
-	font-style:normal;
+
+/* COLORSCHEME */
+
+:root {
+    --color-bg: lightcyan;
+    --base-bg: lightcyan;
+    --gray-bg: lightsteelblue;
+    --blue-bg: steelblue;
+    --base-text: black;
+    --blue-text: midnightblue;
+    --link-text:mediumblue;
+    --linkv-text: yellowgreen;
+
+    --grid-gap: 5px;
+
 }
-html {
-	-webkit-text-size-adjust: 100%; /* Prevents iOS text size adjust after orientation change, without disabling user zoom */
-	-ms-text-size-adjust: 100%; /* www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/ */
-}
-* {
-	box-sizing: border-box; /* apply a natural box layout model to all elements; see http://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
+
+/* HTML-DEFINED ELEMENT STYLES */
+
+body {
+    font-family: 'Lagrange Mono';
+    background-color: var(--base-bg);
+    color: var(--blue-text);
 }
 
 h1 {
-    color: black;
+    font-family:Arial, Helvetica, sans-serif;
     font-size: 150%;
-    padding: 0;
     margin: 0;
+}
+h3, h4 {
+    font-size: 0.9rem;
+    line-height: 115%;
+    border-bottom: 1px solid var(--blue-bg);
+}
+a {
+    text-decoration:none;
 }
 a img {
 	border: 0;
@@ -43,10 +78,81 @@ a img {
 ol, ul {
 	list-style: none;
 }
+
 button {
 	background: none;
-	border:1px solid black;
+	border:1px solid var(--blue-text);
     box-shadow: 1px 2px;
 	border-radius: 0;
+    margin: var(--grid-gap);
 	cursor: pointer;
 }
+
+
+
+/* CLASS STYLES */
+
+/* "regular" class - covers common styles */
+
+.title { align-self: end; }
+
+.reg {
+    border: 1px solid var(--blue-text);
+    box-shadow: 1px 1px var(--blue-text);
+}
+/* top nav, tab-like layout */
+
+.grid-container {
+    display: grid;
+    grid-gap: 0;
+    grid-template-columns: minmax(160px, 1fr) var(--grid-gap) 4fr;
+    grid-template-rows: auto 1fr var(--grid-gap) 1fr;
+}
+
+
+
+/* sidenav (aside) */
+.sidenav { 
+    grid-column: 1;
+}
+
+/* FOOTER ("bumper") */
+.bumper {
+    width: 100%;
+    grid-column: span 4;
+    grid-row: 4;
+}
+
+/* various size placeholder */
+.placeholder-s {
+    height: 4rem;
+}
+
+.placeholder-l {
+    height: 12rem;
+}
+
+/* WIDTH-CONDITIONAL STYLES (Media query) */
+
+@media (width>=675px) {
+
+    .grid-container {
+        margin-left: var(--grid-gap);
+        margin-right: var(--grid-gap)x;
+    }
+
+}
+
+@media (width<675px) {
+    .sidenav {
+        border-left: none;
+    }
+    .content-main-container {
+        border-right: none;
+    }
+    .bumper {
+        border-left: none;
+        border-right: none;
+    }
+}
+
