--- a/static/styles.css
+++ b/static/styles.css
@@ -81,6 +81,7 @@ ol, ul {
 
 button {
 	background: none;
+    font-family: 'Lagrange Mono';
 	border:1px solid var(--blue-text);
     box-shadow: 1px 2px;
 	border-radius: 0;
