--- a/static/styles.css
+++ b/static/styles.css
@@ -75,6 +75,8 @@ a {
 }
 a img {
 	border: 0;
+    image-rendering: pixelated;
+    max-width:100%;
 }
 ol, ul {
 	list-style: none;
@@ -113,11 +115,6 @@ button {
 
 
 
-/* sidenav (aside) */
-.sidenav { 
-    grid-column: 1;
-    justify-self: stretch;
-}
 
 /* FOOTER ("bumper") */
 .bumper {
@@ -137,6 +134,7 @@ button {
 
 /* WIDTH-CONDITIONAL STYLES (Media query) */
 
+/*grid margin on left and right when width is above 675*/
 @media (width>=675px) {
 
     .grid-container {
@@ -145,7 +143,7 @@ button {
     }
 
 }
-
+/* TODO: setup mobile layout (sitemap/updates sidenav goes below main content container */
 @media (width<675px) {
     .sidenav {
         border-left: none;
@@ -158,7 +156,7 @@ button {
         border-right: none;
     }
 	.grid-container {
-    	grid-template-columns: minmax(100px, 1fr) var(--grid-gap) 4fr;
+    	grid-template-columns: minmax(130px, 1fr) var(--grid-gap) 4fr;
     	grid-template-rows: auto 1fr var(--grid-gap) 1fr;
 	}
 }
